[tool.poetry]
name = "flake8-error-link"
version = "1.1.0"
description = "A linter that ensures all raised Exceptions include an error with a link to more information"
authors = ["David Andersson <51036209+jdkandersson@users.noreply.github.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "flake8_error_link.py"}]
classifiers = [
    "Framework :: Flake8",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
]

[tool.poetry.dependencies]
python = "^3.11"
flake8 = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
mypy = "^0.991"
isort = "^5.11.3"
black = "^22.12.0"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
flake8-docstrings = "^1.6.0"
flake8-builtins = "^2.0.1"
pep8-naming = "^0.13.2"
codespell = "^2.2.2"
pylint = "^2.15.9"
pydocstyle = "^6.1.1"
toml = "^0.10.2"
astpretty = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."flake8.extension"]
ELI = "flake8_error_link:Plugin"

[tool.black]
line-length = 99
target-version = ["py311"]

[tool.isort]
line_length = 99
profile = "black"
extra_standard_library = ["tomllib"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 100
show_missing = true

[tool.mypy]
ignore_missing_imports = true
